新增 Trial.html 文件，建立基本網頁結構與內容

--- a/Trial.html
+++ b/Trial.html
@@ -1,3 +1,5 @@
+Trial
+
 <!doctype html>
 
 <html>
@@ -6,7 +8,7 @@
 
         <title>Trial</title>
 
-        <link rel="css" href="CSS.txt">
+        <link rel="css" href="css">
 
         <style>
             h1{background-image: url('https://img.freepik.com/free-vector/vector-background-absvsct-polygon-triangles_2065-346.jpg?t=st=1738827326~exp=1738830926~hmac=9f70cdeaddc45c89947f0cf06afbad5e88cb45378ac17508507637277f167911&w=1380');
@@ -19,7 +21,7 @@
         <h1>Issac</h1>  
         <hr>
     
-        <h2> <button type='button' onclick='p'> About me </h2>
+        <h2> About me </h2>
             <p class="one"> I’m a graduated student of Bachelor of Business 
                 (International Hotel & Resort Management) 
                 at the Blue Mountains International Hospitality Management School
